# deep_forked

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  merged.sh
exp/rl_exp/batch0_merged/SC/Training/: SC_9_11__pl_6.txt
exp/rl_exp/batch0_merged/SCRich/Test/: SC_R_10_10__pl_13.txt  SC_R_10_10__pl_14.txt  SC_R_10_10__pl_17.txt  SC_R_10_10__pl_2.txt  SC_R_10_10__pl_3.txt  SC_R_10_10__pl_9.txt
exp/rl_exp/batch0_merged/SCRich/Training/: SC_R_10_10__pl_10.txt  SC_R_10_10__pl_6.txt  SC_R_10_10__pl_7.txt
exp/rl_exp/batch0_merged/_models/CC/: frontier_policy.onnx  frontier_policy_16.onnx  frontier_policy_32.onnx  frontier_policy_64.onnx  frontier_policy_8.onnx  frontier_policy_info.txt  frontier_policy_info_16.txt  frontier_policy_info_32.txt  frontier_policy_info_64.txt  frontier_policy_info_8.txt
exp/rl_exp/batch0_merged/_models/Grapevine/: frontier_policy_16.onnx  frontier_policy_32.onnx  frontier_policy_64.onnx  frontier_policy_8.onnx
exp/rl_exp/batch0_merged/_models/SC/: frontier_policy_16.onnx  frontier_policy_32.onnx  frontier_policy_64.onnx  frontier_policy_8.onnx
exp/rl_exp/batch0_merged/_models/SCRich/: frontier_policy_16.onnx  frontier_policy_32.onnx  frontier_policy_64.onnx  frontier_policy_8.onnx
exp/rl_exp/batch0_separated/CC/Test/: CC_3_3_3__pl_5.txt
exp/rl_exp/batch0_separated/_models/CC/: frontier_policy.onnx  frontier_policy_info.txt
exp/rl_exp/batch0_separated/_models/SC/: frontier_policy_16.onnx  frontier_policy_32.onnx  frontier_policy_64.onnx  frontier_policy_8.onnx
lib/gnn_handler/: setup.py
lib/rl_handler/: README.md  __main__.py  requirements.txt  setup.py  utils.py
lib/rl_handler/src/: data.py  graph_utils.py  reward_metrics.py  reward_metrics_sanity.py  trainer.py
lib/rl_handler/src/models/: __init__.py  frontier_policy.py
lib/rl_handler/tests/: test_dataset_type_and_reward_targets.py  test_jaccard_frontier_pruning_scope.py  test_merged_candidate_batch_consistency.py  test_path_data_cache_reuse.py
scripts/gnn_exp/: create_all_training_data.py  create_training_data.py
scripts/rl_exp/: advanced_analysis.py  aggregate.py  analyze_results.py  bulk_coverage_run.py  create_all_training_data.py  create_training_data.py  pipeline.py  plot_results.py  plot_results_best.py  plot_results_best_isolated.py  run_all.py  train_models.py
src/: main.cpp
src/actions/: Action.cpp  Action.h
src/argparse/: ArgumentParser.cpp  ArgumentParser.h  Configuration.cpp  Configuration.h
src/heuristics/: HeuristicsManager.tpp
src/heuristics/strategies/epg/: ActionLevel.cpp  ActionLevel.h
src/heuristics/strategies/neuralnets/: FringeEvalRL.h  FringeEvalRL.tpp  GraphNN.h  GraphNN.tpp  GraphTensor.h  TrainingDataset.h  TrainingDataset.tpp
src/search/: PortfolioSearch.cpp  SpaceSearcher.tpp
src/search/search_strategies/: BreadthFirst.h  DepthFirst.h  IterativeDepthFirst.h
src/search/search_strategies/best_first/: Astar.h  BestFirst.h  HeuristicFirst.h  RL_BestFirst.h  Rl_BestFirst.h
src/states/: State.h  State.tpp
src/states/representations/kripke/: KripkeState.cpp  KripkeState.h  KripkeWorld.cpp  KripkeWorld.h
src/states/representations/kripke/helpers/: KripkeEqualityHelper.cpp  KripkeEqualityHelper.h
src/utilities/: Define.h  ExitHandler.h  FormulaHelper.cpp  HelperPrint.cpp
utils/configs/: testing_input.txt
utils/resources/fringe_onnx_exmaple/: rl_frontier_infer.cpp  run_ex.sh
